--- a/Register.html
+++ b/Register.html
@@ -24,6 +24,8 @@
         <input type="password" id="confirm_password" name="confirm_password" required><br><br>
         
         <input type="submit" value="Register">
+        <input type="submit" value="Register">
+        <input type="submit" value="Register">
     </form>
 </body>
 </html></form>
