--- a/Counselling.html
+++ b/Counselling.html
@@ -27,7 +27,9 @@
     <br>
     <button>Submit</button>
     <p>Our team will get back to you as soon as possible. </p>
-
+    <br>
+    <br>
+    <a href="index.html">Back to Home page</a>
 </body>
 
 </html>
