--- a/Profile.html
+++ b/Profile.html
@@ -50,6 +50,10 @@
             <p>Phone Number: 123-456-7890</p>
             <p>Education: Bachelor's Degree in Computer Science</p>
             <p>Interests: Coding, Reading, Traveling</p>
+            <br>
+    <br>
+    <a href="index.html">Back to Home page</a>
+        </div>
         </div>
     </div>
 </body>
