--- a/TrendingCourses.html
+++ b/TrendingCourses.html
@@ -11,5 +11,8 @@
     <div class="Coursera"><a href="https://www.coursera.org/browse">Trending on Harvard coursera</a></div>
     <div class="edx"><a href="https://www.edx.org/">Trending on edx</a></div>
     <div class="Alison"><a href="https://alison.com/all-free-online-courses-certificates-diplomas">Trending on Harvard Alison</a></div>
+    <br>
+    <br>
+    <a href="index.html">Back to Home page</a>
 </body>
 </html>
