--- a/index.html
+++ b/index.html
@@ -16,32 +16,31 @@
       <div class="video">
         <section class="video-background">
           <video autoplay loop muted playsinline>
-            <source src="/videosmple.mp4" type="video/mp4" />
+            <source src="./Materials/videosmple.mp4" type="video/mp4" />
           </video>
 
-          <div class="navbarOne">
+          <div class="navbar">
             <div class="Websitelogo">
-              <img src="/futureforge.png" alt="logo" />
+              <img src="./Materials/futureforge.png" alt="logo" />
             </div>
 
             <div class="serachbar">
-              <span><img src="/searchlogo.png" alt="" /></span>
+              <span><img src="./Materials/searchlogo.png" alt="" /></span>
               <input type="search" placeholder="Search" />
             </div>
 
-            <div class="navOne">
+            <div class="Smallnav">
               <ul>
-                <li><a href="#">Certifications</a></li>
-                <li><a href="#">Course tracking</a></li>
+                <li><a href="Profile.html">Profile</a></li>
               </ul>
             </div>
 
             <div class="LoginButton">
+              <a href="login.html">
               <button type="button">Login</button>
+            </a>
             </div>
           </div>
-
-          <div class="navbarTwo"></div>
 
           <div class="homeText">
             <h1>Choose best, learn best</h1>
@@ -52,21 +51,12 @@
             <button type="button">Get Started</button>
           </div>
 
-          <div class="navbarTwo">
-            <ul>
-              <li><a href="#">Field 1</a></li>
-              <li><a href="#">Field 2</a></li>
-              <li><a href="#">Field 3</a></li>
-              <li><a href="#">Field 4</a></li>
-              <li><a href="#">Field 5</a></li>
-            </ul>
-          </div>
         </section>
       </div>
       <div class="threeSections" style="height: 30vh">
-        <div class="section"><a href="#">Trendig Courses</a></div>
-        <div class="section"><a href="#">Resume builder</a></div>
-        <div class="section"><a href="#">Counselling</a></div>
+        <div class="section"><a href="TrendingCourses.html">Trendig Courses</a></div>
+        <div class="section"><a href="ResumeBuilder.html">Resume builder</a></div>
+        <div class="section"><a href="Counselling.html">Counselling</a></div>
       </div>
     </div>
 
