--- a/login.html
+++ b/login.html
@@ -38,7 +38,7 @@
             </div>
             <div class="signUp">
                 <div class="signupQ">Don't have an account ?</div>
-                <a href="SignUp.html">Sign Up</a>
+                <a href="Register.html">Sign Up</a>
             </div>
 
         </form>
