--- a/ResumeBuilder.html
+++ b/ResumeBuilder.html
@@ -13,5 +13,8 @@
     <div class="kickresume"><a href="https://www.kickresume.com/en/resumes/">You’ve never seen
         a resume builder this good.</a></div>
     <div class="resumebuild"><a href="https://www.resumebuild.ai/">The best AI resume builder in the world</a></div>
+    <br>
+    <br>
+    <a href="index.html">Back to Home page</a>
 </body>
 </html>
