--- a/Profile.html
+++ b/Profile.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Profile</title>
     <link rel="stylesheet" href="profile.css">
 </head>
+
 <body>
     <div class="profile-container">
         <img src="/Materials/images (1).jpeg" alt="Profile Photo" class="profile-photo">
@@ -16,10 +18,11 @@
             <p>Education: Bachelor's Degree in Computer Science</p>
             <p>Interests: Coding, Reading, Traveling</p>
             <br>
-    <br>
-    <a href="index.html">Back to Home page</a>
-        </div>
+            <br>
+            <a href="index.html">Back to Home page</a>
         </div>
     </div>
+    
 </body>
-</html></div>
+
+</html>
