--- a/TrendingCourses.html
+++ b/TrendingCourses.html
@@ -1,18 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="TrendingCourses.css" />
 </head>
+
 <body>
-    <div class="harvard"><a href="https://pll.harvard.edu/trending">Trending on Harvard university</a></div>
-    <div class="udemy"><a href="https://www.udemy.com/">Trending on Harvard udemy</a></div>
-    <div class="Coursera"><a href="https://www.coursera.org/browse">Trending on Harvard coursera</a></div>
-    <div class="edx"><a href="https://www.edx.org/">Trending on edx</a></div>
-    <div class="Alison"><a href="https://alison.com/all-free-online-courses-certificates-diplomas">Trending on Harvard Alison</a></div>
-    <br>
-    <br>
-    <a href="index.html">Back to Home page</a>
+    <div class="content">
+        <div class="courses">
+            
+            <div id="box" class="harvard">
+                <a href="https://pll.harvard.edu/trending">👉Trending on Harvard university👈</a>
+            </div>
+            <div id="box" class="udemy">
+                <a href="https://www.udemy.com/">👉Trending on udemy👈</a>
+            </div>
+            <div id="box" class="Coursera">
+                <a href="https://www.coursera.org/browse">👉Trending on coursera👈</a>
+            </div>
+            <div id="box" class="edx"><a href="https://www.edx.org/">👉Trending on edx👈</a></div>
+            <div id="box" class="Alison">
+                <a href="https://alison.com/all-free-online-courses-certificates-diplomas">👉Trending on
+                    Alison👈</a>
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+        <a href="index.html">Back to Home page</a>
+    </div>
+
 </body>
+
 </html>
