made css of ResumeBuilder.html

--- a/ResumeBuilder.html
+++ b/ResumeBuilder.html
@@ -1,20 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <div class="resumebuilder"><a href="https://www.resumebuilder.com/">The Best Online Resume Builder</a></div>
-    <div class="resume"><a href="https://www.resume.com/">Make resume simple.
-        Make resume work.</a></div>
-    <div class="mycvcreater"><a href="https://www.mycvcreator.com/blog/free-resume-builder-online-create-a-professional-resume-at-no-cost">Free Resume Builer Online: Create a Professional Resume at No Cost</a></div>
-    <div class="kickresume"><a href="https://www.kickresume.com/en/resumes/">You’ve never seen
-        a resume builder this good.</a></div>
-    <div class="resumebuild"><a href="https://www.resumebuild.ai/">The best AI resume builder in the world</a></div>
-    <br>
-    <br>
+    <link rel="stylesheet" href="ResumeBuilder.css" />
+  </head>
+  <body>
+    <div class="content">
+      <div class="ContentBoxes">
+        <div id="maker" class="resumebuilder">
+          <a href="https://www.resumebuilder.com/"
+            >👉The Best Online Resume Builder👈</a
+          >
+        </div>
+        <div id="maker" class="resume">
+          <a href="https://www.resume.com/"
+            >👉Make resume simple. <br>Make resume work.👈</a
+          >
+        </div>
+        <div id="maker" class="mycvcreater">
+          <a
+            href="https://www.mycvcreator.com/blog/free-resume-builder-online-create-a-professional-resume-at-no-cost"
+            >👉Free Resume Builer Online: Create <br>a Professional Resume at No
+            Cost👈</a
+          >
+        </div>
+        <div id="maker" class="kickresume">
+          <a href="https://www.kickresume.com/en/resumes/"
+            >👉You've never seen a resume <br> builder this good.👈</a
+          >
+        </div>
+        <div id="maker" class="resumebuild">
+          <a href="https://www.resumebuild.ai/"
+            >👉The best AI resume <br> builder in the world👈</a
+          >
+        </div>
+      </div>
+    </div>
+<div class="footer">
     <a href="index.html">Back to Home page</a>
+</div>  
 </body>
 </html>
