made css for counselling.html

--- a/Counselling.html
+++ b/Counselling.html
@@ -2,34 +2,42 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="Counselling.css" />
 </head>
 
 <body>
-    <h1>Counselling</h1>
-    <p>Our counselling services are available to all students. We offer a range of services to help you with any
-        personal or academic issues you may be facing. Our team is here to help you with any issues you may be facing.
-    </p>
-    <label for="email">Email</label>
-    <input type="email" name="" id="">
-    <br>
-    <br>
-    <label for="input">Phone Number</label>
-    <input type="tel" pattern="[0-9]{5}-[0-9]{5}" required/>
-    <br>
-    <br>
-    <br>
-    <label for="input">Message</label>
-    <br>
-    <textarea name="" id="" cols="30" rows="10"></textarea>
-    <br>
-    <button>Submit</button>
-    <p>Our team will get back to you as soon as possible. </p>
-    <br>
-    <br>
-    <a href="index.html">Back to Home page</a>
+    <div class="main">
+        <h1>Counselling</h1>
+        <p class="p1">
+            Our counselling services are available to all students. We offer a range
+            of services to help you with any personal or academic issues you may be
+            facing. Our team is here to help you with any issues you may be facing.
+        </p>
+        <div class="content">
+            <form action="" class="form">
+                <br />
+                <label for="email">Email</label>
+                <input type="email" name="" id="" />
+                <br />
+                <label for="input">Phone Number</label>
+                <input type="tel" pattern="[0-9]{5}-[0-9]{5}" required />
+                <br />
+                <br />
+                <label for="input">Ask your query</label>
+                <br />
+                <textarea name="" id="" cols="30" rows="10"></textarea>
+                <br />
+                <button>Submit</button>
+                <p class="p2">Our team will get back to you as soon as possible.</p>
+            </form>
+        </div>
+    </div>
+    <div class="footer">
+        <a href="index.html">Back to Home page</a>
+    </div>
 </body>
 
 </html>
