--- a/ChangePassword.html
+++ b/ChangePassword.html
@@ -1,22 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="ChangePassword.css">
 </head>
+
 <body>
-    <form class="ChangePasswordForm">
-        <h1>Change Password</h1>
-        <div class="form">
-            <label for="Email">Email</label>
-            <input type="password" id="oldPassword" name="oldPassword" required>
-            <label for="newPassword">New Password</label>
-            <input type="password" id="newPassword" name="newPassword" required>
-            <label for="confirmPassword">Confirm Password</label>
-            <input type="password" id="confirmPassword" name="confirmPassword" required>
-            <button type="submit">Change Password</button>
-        </div>
-    </form>
+    <div class="container">
+        <form class="ChangePasswordForm">
+            <h1>Change Password</h1>
+            <div class="form">
+                <label for="Email">Email</label>
+                <br>
+                <input type="email" id="email" name="email" required>
+                <br>
+                <label for="newPassword">New Password</label>
+                <br>
+                <input type="password" id="newPassword" name="newPassword" required>
+                <br>
+                <label for="confirmPassword">Confirm Password</label>
+                <br>
+                <input type="password" id="confirmPassword" name="confirmPassword" required>
+                <br>
+                <button type="submit">Change Password</button>
+            </div>
+        </form>
+    </div>
 </body>
+
 </html>
