Add a Article in second page
it is about 5 reason you are worried about your job

--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="styles.css" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=person"
-    />
-  </head>
 
-  <body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=person" />
+</head>
+
+<body>
     <div class="firstPage">
       <div class="video">
         <section class="video-background">
@@ -37,8 +36,8 @@
 
             <div class="LoginButton">
               <a href="login.html">
-              <button type="button">Login</button>
-            </a>
+                <button type="button">Login</button>
+              </a>
             </div>
           </div>
 
@@ -60,6 +59,15 @@
       </div>
     </div>
 
-    <div class="SecondPage"></div>
-  </body>
+    <div class="SecondPage">
+      <div class="content">
+        <section class="content1">
+          <img src="Materials/worryImage.jpg" alt="">
+          <a href="Article1.html">5 Reasons You're Nervous About a New Job</a>
+        </section>
+      </div>
+    </div>
+  
+</body>
+
 </html>
