--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
         </section>
       </div>
     </div>
+
+    <div class="ThirdPage">
+      <div class="content"></div>
+    </div>
   
 </body>
 
