fixed link name
for password reset

--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
             <label for="password">password</label>
             <input type="password" name="password" placeholder="Enter A Password" />
             <div class="forPasswordReset">
-                <a href="resetPassword.html">Forgot Password?</a>
+                <a href="ChangePassword.html">Forgot Password?</a>
             </div>
             <button class="LoginButton" type="submit">Login</button>
             <div class="or">
