made feedback.css

--- a/Feedback.html
+++ b/Feedback.html
@@ -10,22 +10,21 @@
 
 <body>
     <div class="container">
-        <form action="Feedback.css" method="post">
+        <form class="form" action="Feedback.css" method="post">
             <h1>Feedback Form</h1>
             <label for="name">Name:</label>
             <br />
             <input type="text" id="name" name="name" required />
             <br />
-            <br />
             <label for="email">Email:</label>
             <br />
             <input type="email" id="email" name="email" required />
-            <br />
+
             <br />
             <label for="feedback">Feedback:</label>
             <br />
             <textarea id="feedback" name="feedback" rows="4" cols="50" required></textarea>
-            <br />
+
             <br />
             <button type="submit" value="Submit">Submit</button>
         </form>
