--- a/Profile.html
+++ b/Profile.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="profile-container">
-        <img src="/Materials/images (1).jpeg" alt="Profile Photo" class="profile-photo">
+        <img src="Materials/images (1).jpeg" alt="Profile Photo" class="profile-photo">
         <div class="profile-info">
             <h2>Username</h2>
             <p>Email: user@example.com</p>
