--- a/Register.html
+++ b/Register.html
@@ -22,6 +22,27 @@
             <label for="email">Email:</label><br>
             <input type="email" id="email" name="email" required>
 
+            <label for="phoneNumber">Phone Number:</label><br>
+            <input type="number" id="phoneNumber" name="phoneNumber" required>
+
+
+            <label for="Age">Age:</label><br>
+            <input type="number" id="number" name="number" required>
+
+            <label for="gender">Gender:</label><br>
+            <input type="radio" name="Gender" id="Gender" required>
+            <option class="option" value="Male">Male</option>
+            <input type="radio" name="Gender" id="Gender" required>
+            <option class="option" value="Female">Female</option>
+
+            <label for="City">City :</label><br>
+            <input type="text" id="city" name="city" required>
+
+            <label for="country">country:</label><br>
+            <input type="text" id="country" name="country" required>
+
+
+
             <label for="password">Password:</label><br>
             <input type="password" id="password" name="password" required>
 
@@ -29,6 +50,7 @@
             <input type="password" id="confirm_password" name="confirm_password" required>
 
             <input class="RegisterButton" type="submit" value="Register">
+
         </form>
     </div>
 </body>
