added skills,interests,branch for input

--- a/Profile.html
+++ b/Profile.html
@@ -15,8 +15,20 @@
             <h2>Username</h2>
             <p>Email: user@example.com</p>
             <p>Phone Number: 123-456-7890</p>
-            <p>Education: Bachelor's Degree in Computer Science</p>
-            <p>Interests: Coding, Reading, Traveling</p>
+            <!-- <p>Education: Bachelor's Degree in Computer Science</p> -->
+            <!-- <p>Interests: Coding, Reading, Traveling</p> -->
+             <input type="text" id="skills" name="skills" placeholder="Enter your Skills here ">
+             
+<input type="text" class="stream" id="stream" name="stream" placeholder="Enter your stream">
+
+<input type="text" class="CollegeName" id="12th" name="CollegeName" placeholder="College Name (if you in) ">
+
+<input type="text" class="branch" id="branch" name="branch" placeholder="Branch ">
+
+
+
+<input type="text" id="interests" name="interests" placeholder="Interests">
+
             <br>
             <br>
             <a href="index.html">Back to Home page</a>
@@ -26,3 +38,6 @@
 </body>
 
 </html>
+
+
+
