--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </section>
       </div>
       <div class="threeSections" style="height: 30vh">
-        <div class="section"><a href="TrendingCourses.html">Trendig Courses</a></div>
+        <div class="section"><a href="TrendingCourses.html">Trending Courses</a></div>
         <div class="section"><a href="ResumeBuilder.html">Resume builder</a></div>
         <div class="section"><a href="Counselling.html">Counselling</a></div>
       </div>
@@ -69,7 +69,11 @@
     </div>
 
     <div class="ThirdPage">
-      <div class="content"></div>
+      <div class="content">
+        <section class="content2">
+          <img src="" alt="">
+        </section>
+      </div>
     </div>
   
 </body>
