--- a/Profile.html
+++ b/Profile.html
@@ -13,21 +13,22 @@
         <img src="Materials/images (1).jpeg" alt="Profile Photo" class="profile-photo">
         <div class="profile-info">
             <h2>Username</h2>
-            <p>Email: user@example.com</p>
-            <p>Phone Number: 123-456-7890</p>
+            <!-- <p>Email: user@example.com</p> -->
+            <!-- <p>Phone Number: 123-456-7890</p> -->
             <!-- <p>Education: Bachelor's Degree in Computer Science</p> -->
             <!-- <p>Interests: Coding, Reading, Traveling</p> -->
-             <input type="text" id="skills" name="skills" placeholder="Enter your Skills here ">
+<input type="text" id="skills" name="skills" placeholder="Enter your Skills here ">
              
-<input type="text" class="stream" id="stream" name="stream" placeholder="Enter your stream">
-
-<input type="text" class="CollegeName" id="12th" name="CollegeName" placeholder="College Name (if you in) ">
-
-<input type="text" class="branch" id="branch" name="branch" placeholder="Branch ">
-
-
+<input type="text" id="name" name="name" placeholder="Enter your name here ">
 
 <input type="text" id="interests" name="interests" placeholder="Interests">
+
+<input type="text" class="goals" id="goals" name="goals" placeholder="Enter your goals">
+
+<input type="text" class="courses_viewed" id="courses_viewed" name="courses_viewed" placeholder="courses_viewed">
+
+
+
 
             <br>
             <br>
