--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           </div>
 
           <div class="Getstarted">
-            <button type="button">Get Started</button>
+            <button type="button"><a href="Register.html">Get Started</a></button>
           </div>
 
         </section>
@@ -71,9 +71,28 @@
     <div class="ThirdPage">
       <div class="content">
         <section class="content2">
-          <img src="" alt="">
+          <img src="Materials/pexels-cottonbro-5989943.jpg" alt="">
+          <a href="Article2.html">How to Make a Resume for a Job in 2025</a>
+          <!-- <a href="https://resumegenius.com/blog/resume-help/how-to-write-a-resume">How to Make a Resume for a Job in 2025</a> -->
         </section>
       </div>
+    </div>
+
+    <div class="footer">
+        <a href="index.html">Home</a>
+        <br>
+        <a href="Counselling.html">counselling</a>
+        <br>
+        <a href="TrendingCourses.html">trending course
+        </a>
+        <br>
+        <a href="ResumeBuilder.html">resume builder
+        </a>
+        <br>
+        <a href="Feedback.html">feedback
+        </a>
+        <br>
+        <a href="">Contact Us</a>
     </div>
   
 </body>
