--- a/Article1.html
+++ b/Article1.html
@@ -9,6 +9,7 @@
             font-family: Arial, sans-serif;
             margin: 20px;
             padding: 0;
+            background: linear-gradient(to right, #ffe632, #68b5f4); 
         }
 
         p {
