--- a/index.html
+++ b/index.html
@@ -11,90 +11,93 @@
 </head>
 
 <body>
-    <div class="firstPage">
-      <div class="video">
-        <section class="video-background">
-          <video autoplay loop muted playsinline>
-            <source src="./Materials/videosmple.mp4" type="video/mp4" />
-          </video>
+  <div class="firstPage">
+    <div class="video">
+      <section class="video-background">
+        <video autoplay loop muted playsinline>
+          <source src="./Materials/videosmple.mp4" type="video/mp4" />
+        </video>
 
-          <div class="navbar">
-            <div class="Websitelogo">
-              <img src="./Materials/futureforge.png" alt="logo" />
-            </div>
-
-            <div class="serachbar">
-              <span><img src="./Materials/searchlogo.png" alt="" /></span>
-              <input type="search" placeholder="Search" />
-            </div>
-
-            <div class="Smallnav">
-              <ul>
-                <li><a href="Profile.html">Profile</a></li>
-              </ul>
-            </div>
-
-            <div class="LoginButton">
-              <a href="login.html">
-                <button type="button">Login</button>
-              </a>
-            </div>
+        <div class="navbar">
+          <div class="Websitelogo">
+            <img src="./Materials/futureforge.png" alt="logo" />
           </div>
 
-          <div class="homeText">
-            <h1>Choose best, learn best</h1>
-            <h1>with Future Forge</h1>
+          <div class="serachbar">
+            <span><img src="./Materials/searchlogo.png" alt="" /></span>
+            <input type="search" placeholder="Search" />
           </div>
 
-          <div class="Getstarted">
-            <button type="button"><a href="Register.html">Get Started</a></button>
+          <div class="Smallnav">
+            <ul>
+              <li><a href="Profile.html">Profile</a></li>
+            </ul>
           </div>
 
-        </section>
-      </div>
-      <div class="threeSections" style="height: 30vh">
-        <div class="section"><a href="TrendingCourses.html">Trending Courses</a></div>
-        <div class="section"><a href="ResumeBuilder.html">Resume builder</a></div>
-        <div class="section"><a href="Counselling.html">Counselling</a></div>
-      </div>
+          <div class="LoginButton">
+            <a href="login.html">
+              <button type="button">Login</button>
+            </a>
+          </div>
+        </div>
+
+        <div class="homeText">
+          <h1>Choose best, learn best</h1>
+          <h1>with Future Forge</h1>
+        </div>
+
+        <div class="Getstarted">
+          <button type="button"><a href="Register.html">Get Started</a></button>
+        </div>
+
+      </section>
+    </div>
+    <div class="threeSections" style="height: 30vh">
+      <div class="section"><a href="TrendingCourses.html">Trending Courses</a></div>
+      <div class="section"><a href="ResumeBuilder.html">Resume builder</a></div>
+      <div class="section"><a href="Counselling.html">Counselling</a></div>
+    </div>
+  </div>
+
+  <div class="SecondPage">
+    <div class="content">
+      <section class="content1">
+        <img src="Materials/worryImage.jpg" alt="">
+        <a href="Article1.html">5 Reasons You're Nervous About a New Job</a>
+      </section>
+    </div>
+  </div>
+
+  <div class="ThirdPage">
+    <div class="content">
+      <section class="content2">
+        <img src="Materials/pexels-cottonbro-5989943.jpg" alt="">
+        <a href="Article2.html">How to Make a Resume for a Job in 2025</a>
+        <!-- <a href="https://resumegenius.com/blog/resume-help/how-to-write-a-resume">How to Make a Resume for a Job in 2025</a> -->
+      </section>
+    </div>
+  </div>
+
+  <div class="footer">
+    <div class="links">
+      <a href="index.html">Home</a>
+      <br>
+      <a href="Counselling.html">counselling</a>
+      <br>
+      <a href="TrendingCourses.html">trending course
+      </a>
+      <br>
+      <a href="ResumeBuilder.html">resume builder
+      </a>
+      <br>
+      <a href="Feedback.html">feedback
+      </a>
     </div>
 
-    <div class="SecondPage">
-      <div class="content">
-        <section class="content1">
-          <img src="Materials/worryImage.jpg" alt="">
-          <a href="Article1.html">5 Reasons You're Nervous About a New Job</a>
-        </section>
-      </div>
-    </div>
+    <br>
+     <p>&#169 copyright 2025 - 2026</p>
+  </div>
 
-    <div class="ThirdPage">
-      <div class="content">
-        <section class="content2">
-          <img src="Materials/pexels-cottonbro-5989943.jpg" alt="">
-          <a href="Article2.html">How to Make a Resume for a Job in 2025</a>
-          <!-- <a href="https://resumegenius.com/blog/resume-help/how-to-write-a-resume">How to Make a Resume for a Job in 2025</a> -->
-        </section>
-      </div>
-    </div>
-
-    <div class="footer">
-        <a href="index.html">Home</a>
-        <br>
-        <a href="Counselling.html">counselling</a>
-        <br>
-        <a href="TrendingCourses.html">trending course
-        </a>
-        <br>
-        <a href="ResumeBuilder.html">resume builder
-        </a>
-        <br>
-        <a href="Feedback.html">feedback
-        </a>
-        <br>
-        <a href="">Contact Us</a>
-    </div>
-  
 </body>
 
 </html>
