--- a/Article2.html
+++ b/Article2.html
@@ -7,14 +7,12 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 20px;
+            margin: 80px 120px 0px 80px  ;
             padding: 0;
             background: linear-gradient(to right, #ffe632, #68b5f4); 
         }
 
-        p {
-            background-color: #fff;
-        }
+       
 
         h2 {
 
