add submit button

--- a/Profile.html
+++ b/Profile.html
@@ -28,7 +28,7 @@
 <input type="text" class="courses_viewed" id="courses_viewed" name="courses_viewed" placeholder="courses_viewed">
 
 
-
+            <button type="submit">Submit</button>
 
             <br>
             <br>
