--- a/TrendingCourses.html
+++ b/TrendingCourses.html
@@ -13,7 +13,7 @@
         <div class="courses">
             
             <div id="box" class="harvard">
-                <a href="https://pll.harvard.edu/trending" style="background-image: url(Materials/harvard.jpg) ; background-size: contain;" >👉Trending on Harvard university👈</a>
+                <a href="https://pll.harvard.edu/trending"  >👉Trending on Harvard university👈</a>
             </div>
             <div id="box" class="udemy">
                 <a href="https://www.udemy.com/">👉Trending on udemy👈</a>
