--- a/Article2.html
+++ b/Article2.html
@@ -9,6 +9,7 @@
             font-family: Arial, sans-serif;
             margin: 80px 120px 0px 80px  ;
             padding: 0;
+            font-size: larger;
             background: linear-gradient(to right, #ffe632, #68b5f4); 
         }
 
